--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#FCFCFF" />
+    <meta name="theme-color" content="#843CCC" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <title>FrontendDev - Andrey Scherbakov</title>
   </head>
