--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#843CCC" />
-    <meta name="title" content="Frontend Developer" />
-    <meta name="description" content="Frontend Developer Portfolio" />
+    <meta name="title" content="lcyWay Portfolio" />
+    <meta name="description" content="Andrey Scherbakov (lcyWay) frontend developer portfolio - welcome!" />
+    <meta property="og:title" content="lcyWay Portfolio" />
+    <meta property="og:image" content="https://lcyway-frontend.vercel.app/images/og-image.png" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <title>FrontendDev - Andrey Scherbakov</title>
   </head>
